added witch's lavender!

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -149,6 +149,9 @@
   "block.ethermist.nightbell": "Nightbell",
   "block.ethermist.nightbell_flower_pot": "Nightbell Flower Pot",
 
+  "block.ethermist.witch_lavender": "Witch's Lavender",
+  "block.ethermist.witch_lavender_flower_pot": "Witch's Lavender Flower Pot",
+
   "block.ethermist.slimy_allium": "Slimy Allium",
 
   "block.ethermist.rich_grass": "Rich Grass",
