--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -98,6 +98,24 @@
   "block.ethermist.frostpine_door": "Frostpine Door",
   "block.ethermist.frostpine_trapdoor": "Frostpine Trapdoor",
 
+  "block.ethermist.amberwood_log": "Amberwood Log",
+  "block.ethermist.stripped_amberwood_log": "Stripped Amberwood Log",
+  "block.ethermist.amberwood_wood": "Amberwood Wood",
+  "block.ethermist.stripped_amberwood_wood": "Stripped Amberwood Wood",
+  "block.ethermist.red_amberwood_leaves": "Red Amberwood Leaves",
+  "block.ethermist.orange_amberwood_leaves": "Orange Amberwood Leaves",
+  "block.ethermist.yellow_amberwood_leaves": "Yellow Amberwood Leaves",
+  "block.ethermist.amberwood_sapling": "Amberwood Sapling",
+  "block.ethermist.amberwood_planks": "Amberwood Planks",
+  "block.ethermist.amberwood_stairs": "Amberwood Stairs",
+  "block.ethermist.amberwood_slab": "Amberwood Slab",
+  "block.ethermist.amberwood_pressure_plate": "Amberwood Pressure Plate",
+  "block.ethermist.amberwood_button": "Amberwood Button",
+  "block.ethermist.amberwood_fence": "Amberwood Fence",
+  "block.ethermist.amberwood_fence_gate": "Amberwood Fence Gate",
+  "block.ethermist.amberwood_door": "Amberwood Door",
+  "block.ethermist.amberwood_trapdoor": "Amberwood Trapdoor",
+
   "block.ethermist.cubed_abyssal_mushroom": "Cubed Abyssal Mushroom",
   "block.ethermist.cubed_abyssal_mushroom_stairs": "Cubed Abyssal Mushroom Stairs",
   "block.ethermist.cubed_abyssal_mushroom_slab": "Cubed Abyssal Mushroom Slab",
