colored saplings and leaves for amberwood

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -105,7 +105,11 @@
   "block.ethermist.red_amberwood_leaves": "Red Amberwood Leaves",
   "block.ethermist.orange_amberwood_leaves": "Orange Amberwood Leaves",
   "block.ethermist.yellow_amberwood_leaves": "Yellow Amberwood Leaves",
-  "block.ethermist.amberwood_sapling": "Amberwood Sapling",
+  "block.ethermist.green_amberwood_leaves": "Green Amberwood Leaves",
+  "block.ethermist.green_amberwood_sapling": "Green Amberwood Sapling",
+  "block.ethermist.red_amberwood_sapling": "Red Amberwood Sapling",
+  "block.ethermist.orange_amberwood_sapling": "Orange Amberwood Sapling",
+  "block.ethermist.yellow_amberwood_sapling": "Yellow Amberwood Sapling",
   "block.ethermist.amberwood_planks": "Amberwood Planks",
   "block.ethermist.amberwood_stairs": "Amberwood Stairs",
   "block.ethermist.amberwood_slab": "Amberwood Slab",
