added dawning hyacinth

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -174,6 +174,9 @@
   "block.ethermist.witch_lavender": "Witch's Lavender",
   "block.ethermist.witch_lavender_flower_pot": "Witch's Lavender Flower Pot",
 
+  "block.ethermist.dawning_hyacinth": "Dawning Hyacinth",
+  "block.ethermist.dawning_hyacinth_flower_pot": "Dawning Hyacinth Flower Pot",
+
   "block.ethermist.slimy_allium": "Slimy Allium",
 
   "block.ethermist.rich_grass": "Rich Grass",
