--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -195,6 +195,9 @@
   "block.ethermist.dawning_hyacinth": "Dawning Hyacinth",
   "block.ethermist.dawning_hyacinth_flower_pot": "Dawning Hyacinth Flower Pot",
 
+  "block.ethermist.cinderbloom": "Cinderbloom",
+  "block.ethermist.cinderbloom_flower_pot": "Cinderbloom",
+
   "block.ethermist.slimy_allium": "Slimy Allium",
 
   "block.ethermist.rich_grass": "Rich Grass",
