--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -183,8 +183,8 @@
 
   "block.ethermist.crumbling_etherstone": "Crumbling Etherstone",
 
-  "block.ethermist.glimmer_blossom": "Glimmer Blossom",
-  "block.ethermist.glimmer_blossom_flower_pot": "Glimmer Blossom Flower Pot",
+  "block.ethermist.glimmerbud": "Glimmerbud",
+  "block.ethermist.glimmerbud_flower_pot": "Glimmerbud Flower Pot",
 
   "block.ethermist.nightbell": "Nightbell",
   "block.ethermist.nightbell_flower_pot": "Nightbell Flower Pot",
