small abyssal mushroom

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -199,6 +199,7 @@
   "block.ethermist.cinderbloom_flower_pot": "Cinderbloom",
 
   "block.ethermist.slimy_allium": "Slimy Allium",
+  "block.ethermist.small_abyssal_mushroom": "Small Abyssal Mushroom",
 
   "block.ethermist.rich_grass": "Rich Grass",
 
