abyssal mushroom just one, and new top/trunk

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -150,8 +150,8 @@
 
   "block.ethermist.large_blue_abyssal_mushroom_top": "Large Blue Abyssal Mushroom Top",
   "block.ethermist.large_orange_abyssal_mushroom_top": "Large Orange Abyssal Mushroom Top",
-  "block.ethermist.large_blue_abyssal_mushroom_stem": "Large Blue Abyssal Mushroom Stem",
-  "block.ethermist.large_orange_abyssal_mushroom_stem": "Large Orange Abyssal Mushroom Stem",
+  "block.ethermist.large_abyssal_mushroom_gills": "Large Abyssal Mushroom Gills",
+  "block.ethermist.large_abyssal_mushroom_stem": "Large Abyssal Mushroom Stem",
 
   "block.ethermist.sparkling_sand": "Sparkling Sand",
   "block.ethermist.sparkling_sandstone": "Sparkling Sandstone",
