chiseled timeworn sandstone

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -194,6 +194,7 @@
   "block.ethermist.timeworn_sand": "Timeworn Sand",
   "block.ethermist.timeworn_sandstone": "Timeworn Sandstone",
   "block.ethermist.polished_timeworn_sandstone": "Polished Timeworn Sandstone",
+  "block.ethermist.chiseled_timeworn_sandstone": "Chiseled Timeworn Sandstone",
 
   "block.ethermist.polished_timeworn_sandstone_stairs": "Polished Timeworn Sandstone Stairs",
   "block.ethermist.polished_timeworn_sandstone_slab": "Polished Timeworn Sandstone Slab",
