--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -464,6 +464,10 @@
   "item.ethermist.wand_handle.bonus_lifespan": "Bolt Lifespan: ",
   "item.ethermist.wand_handle.bonus_bolt_speed": "Bolt Speed: ",
 
+  "_comment": "--------------- FOODS ---------------",
+  "item.ethermist.shroom_cluster": "Shroom Cluster",
+  "item.ethermist.toasted_shroom_cluster": "Toasted Shroom Cluster",
+
   "_comment": "--------------- ENCHANTMENTS ---------------",
   "enchantment.ethermist.quick_cast": "Quick Cast",
   "enchantment.ethermist.quick_cast.desc": "Decreases cooldown of wands.",
