--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -466,6 +466,9 @@
 
   "_comment": "--------------- FOODS ---------------",
   "item.ethermist.shroom_cluster": "Shroom Cluster",
+  "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
+
+  "_comment": "--------------- SPAWN EGGS ---------------",
   "item.ethermist.toasted_shroom_cluster": "Toasted Shroom Cluster",
 
   "_comment": "--------------- ENCHANTMENTS ---------------",
@@ -513,6 +516,9 @@
   "enchantment.ethermist.augment_abundance.desc": "Blocks and mobs killed by projectiles drop extra loot and experience.",
   "enchantment.ethermist.augment_focus": "Augment: Focus",
   "enchantment.ethermist.augment_focus.desc": "Wand has a longer cooldown, perfect accuracy, higher damage, and faster projectile velocity.",
+
+  "_comment": "--------------- ENTITIES ---------------",
+  "entity.ethermist.gloomie": "Gloomie",
 
   "_comment": "--------------- DEATH MESSAGES ---------------",
   "death.attack.icicle": "%1$s was impaled by an icicle",
