--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -466,10 +466,11 @@
 
   "_comment": "--------------- FOODS ---------------",
   "item.ethermist.shroom_cluster": "Shroom Cluster",
-  "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
+  "item.ethermist.toasted_shroom_cluster": "Toasted Shroom Cluster",
 
   "_comment": "--------------- SPAWN EGGS ---------------",
-  "item.ethermist.toasted_shroom_cluster": "Toasted Shroom Cluster",
+  "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
+  "item.ethermist.glimmerbug_queen_spawn_egg": "Glimmerbug Queen Spawn Egg",
 
   "_comment": "--------------- ENCHANTMENTS ---------------",
   "enchantment.ethermist.quick_cast": "Quick Cast",
@@ -518,7 +519,10 @@
   "enchantment.ethermist.augment_focus.desc": "Wand has a longer cooldown, perfect accuracy, higher damage, and faster projectile velocity.",
 
   "_comment": "--------------- ENTITIES ---------------",
+  "entity.ethermist.glimmerbug_queen.easter_egg": "Little Lady",
+
   "entity.ethermist.gloomie": "Gloomie",
+  "entity.ethermist.glimmerbug_queen": "Glimmerbug Queen",
 
   "_comment": "--------------- DEATH MESSAGES ---------------",
   "death.attack.icicle": "%1$s was impaled by an icicle",
