added wandforging table

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -262,6 +262,8 @@
   "block.ethermist.ancient_etherstone_lapis_ore": "Ancient Etherstone Lapis Ore",
 
   "block.ethermist.icicle": "Icicle",
+  "block.ethermist.wandforging_table": "Wandforging Table",
+  "block.ethermist.wandforging_table.menu": "Wandforging Table",
 
   "_comment": "--------------- GENERIC ---------------",
   "generic.ethermist.time.seconds": " Seconds",
